--- a/web/css/style.css
+++ b/web/css/style.css
@@ -11,3 +11,17 @@ footer {
     padding: 5px 20px;
     margin: 20px 0;
 }
+dl {
+    background: none repeat scroll 0 0 #FAFAFA;
+    padding: 0px;
+    margin: 8px 0;
+}
+dt{
+    display: inline-block;
+    width: 170px;
+}
+dd {
+    display: inline-block;
+    margin-left:8px;
+    vertical-align: top;
+}
